--- a/translations/pl.json
+++ b/translations/pl.json
@@ -7,7 +7,7 @@
   },
   "businessHero": {
     "title": "Business",
-    "description": "Zwiększ swoją sprzedaż online! Obniż koszty dzięki naszym nowoczesnym narzędziom cyfrowym. Dzięki Siz3r Twoi klienci mogą korzystać z wirtualnej przymierzalni i dostarczać Ci swoje wymiary. Przenoś kolekcje do trójwymiaru i minimalizuj ilość zwrotów. Odkryj nową jakość sprzedaży, która pozwoli Ci zaoszczędzić czas i pieniądze!",
+    "description": "Zwiększ swoją sprzedaż online! Dzięki Siz3r Twoi klienci mogą korzystać z wirtualnej przymierzalni i dostarczać Ci swoje wymiary. Przenoś kolekcje do trójwymiaru i minimalizuj ilość zwrotów. Odkryj nową jakość sprzedaży!",
     "button": "Pobierz aplikację",
     "button2": "Dowiedz się więcej"
   },
@@ -67,19 +67,19 @@
     "title": "Funkcje",
     "description": "",
     "image1": {
-      "title": "Twórz dokładne modele sylwetek",
-      "description": "Przekształć zdjęcia klientów w precyzyjne modele 3D"
+      "title": "Precyzyjnie dopasuj ofertę do klienta",
+      "description": "Dzięki tworzeniu wymiarowanego modelu sylwetki klienta, Siz3r rekomenduje najlepiej dopasowane ubrania z oferty sprzedawców."
     },
     "image2": {
-      "title": "Umożliwiaj wirtualne przymierzanie",
-      "description": "Pozwól klientom na wirtualne przymierzanie strojów z Twojej oferty."
+      "title": "Udostępnij wirtualną przymierzalnię",
+      "description": "Nasza platforma umożliwia także wizualizację klienta w wybranych strojach, co pomaga w dokonaniu trafnego wyboru."
     },
     "image3": {
-      "title": "Przenieś swoje ubrania online",
+      "title": "Prezentuj swoje kolekcje ubrań w trójwymiarze",
       "description": "Twórz wirtualne wersje ubrań, dodawaj je do systemu i prezentuj na modelach klientów."
     },
     "image4": {
-      "title": "Twórz awatary",
+      "title": "Gromadź dane statystyczne w celu zwiększenia sprzedaży swoich produktów",
       "description": "Stwórz realistyczne awatary klientów na podstawie ich wymiarów."
     }
   },
