--- a/translations/en.json
+++ b/translations/en.json
@@ -5,48 +5,109 @@
     "button": "Download app",
     "button2": "Learn more"
   },
-  "businessHero": {
-    "title": "Business",
-    "description": "Siz3r is an innovative platform supporting online clothing shopping.",
-    "button": "Download app",
-    "button2": "Learn more"
-  },
   "block1": {
-    "title": "In your size",
-    "description": "Download the app. Take a photo. Try on and buy.",
+    "title": "In >Your size",
+    "description": "Completely for",
     "image1": {
-      "title": "Download app",
-      "description": "It only takes a moment to download the app and access all its features!"
+      "title": ">Download app",
+      "description": "It only takes a moment to download the free app and get access to all the features!"
     },
     "image2": {
-      "title": "Take a photo",
+      "title": "Take a >photo",
       "description": "It's simple! Based on just one photo, we will be able to collect your measurements and allow you to try on clothes without leaving your home!"
     },
     "image3": {
-      "title": "Try on and buy",
+      "title": ">Try >on and >buy",
       "description": "Congratulations! Now you can buy perfectly fitting clothes without visiting the store!"
     }
   },
   "block2": {
-    "title": "Functionalities",
+    "title": "Functions",
     "description": "Siz3r recommends the best-fitting clothes from sellers thanks to precise 3D models of your figure.",
     "image1": {
-      "title": "3D Scanning",
-      "description": "Transform your photos into accurate 3D silhouettes"
+      "title": "Size Dimensioning",
+      "description": "Transform your photos into accurate silhouettes"
     },
     "image2": {
       "title": "Virtual Fitting Room",
-      "description": "Use the virtual fitting room to see how different outfits fit you."
+      "description": "Use the virtual fitting room to see how different outfits fit you"
     },
     "image3": {
-      "title": "Clothes Scanning",
-      "description": "Add clothes to the system and present them on 3D models."
+      "title": "Add clothes",
+      "description": "Add clothes to the system and present them on models"
+    }
+  },
+  "block3": {
+    "title": "With >Siz3r you are >eco!",
+    "description": "By trying on online, you reduce the risk of returning clothes. Reduce your carbon footprint! Lower your CO2 emissions thanks to limited shipments! Be eco-friendly with Siz3r!"
+  },
+  "businessHero": {
+    "title": "Business",
+    "description": "Increase your online sales! With Siz3r, your customers can use a virtual fitting room and provide you with their measurements.",
+    "description2": "Increase your online sales! Thanks to Siz3r, your customers can use a virtual fitting room and provide you with their measurements. Transfer your collections to 3D and minimize the number of returns. Discover a new quality of sales!",
+    "button": "Download app",
+    "button2": "Learn more"
+  },
+  "block1business": {
+    "title": "Functions",
+    "description": "",
+    "image1": {
+      "title": "Precisely match the offer to the customer",
+      "description": "By creating a dimensioned model of the customer's body, Siz3r recommends the best-fitting clothes from the sellers' offer."
+    },
+    "image2": {
+      "title": "Share virtual fitting room",
+      "description": "Our platform also allows you to visualize the customer in selected outfits, which helps you make the right choice."
+    },
+    "image3": {
+      "title": "Present your clothing collections in 3D",
+      "description": "Create virtual versions of clothes, add them to the system and present them on customer models."
+    },
+    "image4": {
+      "title": "Collect statistical data to increase sales of your products",
+      "description": "Create realistic customer avatars based on their dimensions."
+    }
+  },
+  "block2business": {
+    "title": "Benefits",
+    "description": "Lorem ipsum",
+    "image1": {
+      "title": "Benefit1",
+      "description": "Lorem ipsum"
+    },
+    "image2": {
+      "title": "Benefit2",
+      "description": "Lorem ipsum"
+    },
+    "image3": {
+      "title": "Benefit3",
+      "description": "Lorem ipsum"
+    }
+  },
+  "block3business": {
+    "title": "Applications",
+    "description": "Use Siz3r in your industry! Our innovative solutions will help you increase your competitiveness, reduce costs and reduce the number of product returns",
+    "image1": {
+      "title": "E-commerce",
+      "description": "Improve the fit of clothes and reduce returns."
+    },
+    "image2": {
+      "title": "Stationary stores",
+      "description": "Enable customers to try on clothes without physical contact."
+    },
+    "image3": {
+      "title": "Fitness and dietetics",
+      "description": "Monitor your customers' body shape changes."
+    },
+    "image4": {
+      "title": "Entertainment",
+      "description": "Use customer characters in games and virtual worlds"
     }
   },
   "contact": {
-    "title": "Contact us!",
-    "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque ut risus efficitur, dignissim nunc vel, bibendum sem.\n\nNulla condimentum efficitur vehicula. Nullam ac felis fringilla, ultrices purus vel, porta nisl. Mauris ut rutrum tellus, ut placerat turpis. Proin et metus ex. Sed pellentesque finibus pulvinar. Cras tristique aliquet sagittis.\n\nSuspendisse ut vestibulum velit. Phasellus eu nisl maximus, cursus lectus quis, consequat ex.",
-    "contactForm": "Contact Form",
+    "title": "Contact",
+    "description": "",
+    "contactForm": ">Write to us",
     "send": "Send",
     "name": "Name",
     "email": "Email address",
@@ -54,30 +115,6 @@
     "message": "Message",
     "fieldRequired": "Required field",
     "invalidEmail": "Invalid Email"
-  },
-  "block1business": {
-    "title": "What do we do",
-    "description": "By creating a dimensioned 3D model of the customer's body, Siz3r recommends the best-fitting clothes from the sellers' offer.\n\nOur platform also allows you to visualize the customer in selected outfits in the form of three-dimensional models, which helps you make the right choice."
-  },
-  "block2business": {
-    "title": "Industries and applications",
-    "description": "Siz3r is used in various industries, such as e-commerce, traditional stores, fitness, dietetics and entertainment. Our solutions help increase competitiveness, reduce costs and reduce the number of product returns.",
-    "image1": {
-      "title": "E-commerce",
-      "description": "Better fit of clothes, reduce returns."
-    },
-    "image2": {
-      "title": "Traditional stores",
-      "description": "Try on clothes without physical contact."
-    },
-    "image3": {
-      "title": "Fitness and dietetics",
-      "description": "Monitor your body shape changes."
-    },
-    "image4": {
-      "title": "Entertainment",
-      "description": "Personalize avatars in games and virtual worlds."
-    }
   },
   "footer": {
     "description": "Siz3r is an innovative technological platform supporting clothing purchases on e-commerce platforms.",
