--- a/translations/pl.json
+++ b/translations/pl.json
@@ -57,36 +57,36 @@
     },
     "image2": {
       "title": ">Udostępnij wirtualną >przymierzalnię",
-      "description": "Nasza platforma umożliwia także wizualizację klienta w wybranych strojach, co pomaga w dokonaniu trafnego wyboru."
+      "description": "Umożliwiaj wizualizację klienta w wybranych strojach, co pomoże mu w dokonaniu trafnego wyboru."
     },
     "image3": {
       "title": ">Prezentuj swoje kolekcje ubrań w >trójwymiarze",
       "description": "Twórz wirtualne wersje ubrań, dodawaj je do systemu i prezentuj na modelach klientów."
     },
     "image4": {
-      "title": ">Gromadź dane statystyczne w celu >zwiększenia >sprzedaży swoich produktów",
-      "description": "Stwórz realistyczne awatary klientów na podstawie ich wymiarów."
+      "title": ">Gromadź dane statystyczne",
+      "description": "Zbieraj cenne informacje o preferencjach i zachowaniach zakupowych klientów."
     }
   },
   "block2business": {
     "title": "Korzyści",
-    "description": "Lorem ipsum",
+    "description": "",
     "image1": {
-      "title": "Korzyść1",
-      "description": "Lorem ipsum"
+      "title": "Promuj ekologiczne wartości swojej firmy",
+      "description": "Popraw swój wizerunek jako firmy dbającej o środowisko naturalne"
     },
     "image2": {
-      "title": "Korzyść2",
-      "description": "Lorem ipsum"
+      "title": "Zredukuj liczbę zwrotów",
+      "description": "Zmniejsz ilość odsyłanych towarów, oferuj kupującym precyzyjnie dopasowane produkty"
     },
     "image3": {
-      "title": "Korzyść3",
-      "description": "Lorem ipsum"
+      "title": "Zwiększ satysfakcję z zakupu",
+      "description": "Buduj lojalność poprzez lepsze dostosowanie oferty do potrzeb i preferencji Twoich klientów"
     }
   },
   "block3business": {
     "title": "Zastosowania",
-    "description": "Wykorzystaj Siz3r w swojej branży! Nasze innowacyjne rozwiązania pomogą Ci zwiększyć konkurencyjność, zredukować koszty oraz zmniejszyć ilość zwrotów towarów",
+    "description": "",
     "image1": {
       "title": "E-commerce",
       "description": "Zwiększ dopasowanie ubrań i zmniejsz liczbę zwrotów."
