--- a/translations/pl.json
+++ b/translations/pl.json
@@ -42,7 +42,7 @@
     "description": "Przymierzając online zmniejszasz ryzyko zwrotu ubrań. Zmniejsz swój ślad węglowy! Obniż emisję CO2 dzięki ograniczonej ilości przesyłek! Bądź eko z Siz3r!"
   },
   "businessHero": {
-    "title": "Business",
+    "title": "Dla biznesu",
     "description": "Zwiększ swoją sprzedaż online! Dzięki Siz3r Twoi klienci mogą korzystać z wirtualnej przymierzalni i dostarczać Ci swoje wymiary.",
     "description2": "Zwiększ swoją sprzedaż online! Dzięki Siz3r Twoi klienci mogą korzystać z wirtualnej przymierzalni i dostarczać Ci swoje wymiary. Przenoś kolekcje do trójwymiaru i minimalizuj ilość zwrotów. Odkryj nową jakość sprzedaży!",
     "button": "Pobierz aplikację",
