--- a/translations/en.json
+++ b/translations/en.json
@@ -45,7 +45,7 @@
     "title": "Business",
     "description": "Increase your online sales! With Siz3r, your customers can use a virtual fitting room and provide you with their measurements.",
     "description2": "Increase your online sales! Thanks to Siz3r, your customers can use a virtual fitting room and provide you with their measurements. Transfer your collections to 3D and minimize the number of returns. Discover a new quality of sales!",
-    "button": "Download app",
+    "button": "Start for free",
     "button2": "Learn more"
   },
   "block1business": {
