--- a/translations/pl.json
+++ b/translations/pl.json
@@ -45,7 +45,7 @@
     "title": "Dla biznesu",
     "description": "Zwiększ swoją sprzedaż online! Dzięki Siz3r Twoi klienci mogą korzystać z wirtualnej przymierzalni i dostarczać Ci swoje wymiary.",
     "description2": "Zwiększ swoją sprzedaż online! Dzięki Siz3r Twoi klienci mogą korzystać z wirtualnej przymierzalni i dostarczać Ci swoje wymiary. Przenoś kolekcje do trójwymiaru i minimalizuj ilość zwrotów. Odkryj nową jakość sprzedaży!",
-    "button": "Pobierz aplikację",
+    "button": "Rozpocznij za darmo",
     "button2": "Dowiedz się więcej"
   },
   "block1business": {
