--- a/translations/pl.json
+++ b/translations/pl.json
@@ -53,15 +53,15 @@
     "description": "",
     "image1": {
       "title": ">Precyzyjnie dopasuj ofertę do >klienta",
-      "description": "Dzięki tworzeniu wymiarowanego modelu sylwetki klienta, Siz3r rekomenduje najlepiej dopasowane ubrania z oferty sprzedawców."
+      "description": "Dzięki tworzeniu wymiarowanego modelu sylwetki klienta, Siz3r rekomenduje najlepiej dopasowane ubrania z Twojej oferty."
     },
     "image2": {
       "title": ">Udostępnij wirtualną >przymierzalnię",
-      "description": "Umożliwiaj wizualizację klienta w wybranych strojach, co pomoże mu w dokonaniu trafnego wyboru."
+      "description": "Zwiększ komfort zakupowy, poprzez możliwość przymierzania ubrań w aplikacji Siz3r. Ułatwiaj swoim klientom dokonanie właściwego wyboru."
     },
     "image3": {
       "title": ">Prezentuj swoje kolekcje ubrań w >trójwymiarze",
-      "description": "Twórz wirtualne wersje ubrań, dodawaj je do systemu i prezentuj na modelach klientów."
+      "description": "TZamieniaj zdjęcia swoich produktów na ich modele 3d, tak by klienci przymierzali je na swoich modelach."
     },
     "image4": {
       "title": ">Gromadź dane statystyczne",
@@ -73,11 +73,11 @@
     "description": "",
     "image1": {
       "title": "Promuj ekologiczne wartości swojej firmy",
-      "description": "Popraw swój wizerunek jako firmy dbającej o środowisko naturalne"
+      "description": "Promuj swój wizerunek firmy dbającej o środowisko naturalne"
     },
     "image2": {
-      "title": "Zredukuj liczbę zwrotów",
-      "description": "Zmniejsz ilość odsyłanych towarów, oferuj kupującym precyzyjnie dopasowane produkty"
+      "title": "Zmniejsz ilość zwracanych towarów",
+      "description": "Oferuj kupującym precyzyjnie dopasowane produkty, zwiększając ich pewność zakupową"
     },
     "image3": {
       "title": "Zwiększ satysfakcję z zakupu",
