--- a/translations/pl.json
+++ b/translations/pl.json
@@ -77,11 +77,11 @@
     },
     "image2": {
       "title": "Zmniejsz ilość zwracanych towarów",
-      "description": "Oferuj kupującym precyzyjnie dopasowane produkty, zwiększając ich pewność zakupową"
+      "description": "Oferuj kupującym precyzyjnie dopasowane produkty, zwiększając pewność zakupową"
     },
     "image3": {
       "title": "Zwiększ satysfakcję z zakupu",
-      "description": "Buduj lojalność poprzez lepsze dostosowanie oferty do potrzeb i preferencji Twoich klientów"
+      "description": "Wzmacniaj relacje z klientami poprzez dostosowanie oferty do ich potrzeb i preferencji"
     }
   },
   "block3business": {
